--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,8 +12,8 @@ jobs:
     
     # 1. Set Environment Variables from Secrets
     env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AKIAT4PSR6DLGPD3R4NL }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.B/HUmqNmck1Go0sualAXgOjJE0aMfSdoIkFeWYBm }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: "ap-south-1"
 
     steps:
