--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Infrastructure
+name: Deploy
 
 on:
   push:
@@ -7,30 +7,30 @@ on:
 
 jobs:
   terraform:
-    name: "Terraform Apply"
     runs-on: ubuntu-latest
-    
-    # 1. Set Environment Variables from Secrets
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: "ap-south-1"
-
     steps:
-      # 2. Download your code
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # 3. Install Terraform
+      # 1. LOG IN TO AWS EXPLICITLY
+      # This step guarantees the keys are loaded correctly
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-south-1
+
+      # 2. Setup Terraform
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
 
-      # 4. Initialize (Connect to S3 Backend)
+      # 3. Init (Connect to S3)
       - name: Terraform Init
         run: terraform init
         working-directory: ./terraform-lab
 
-      # 5. Apply (Build the Server)
+      # 4. Apply (Create Infrastructure)
       - name: Terraform Apply
         run: terraform apply -auto-approve
         working-directory: ./terraform-lab
